unpackaged/main/default/objects/Opportunity/fields/Confirmed_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Payment_Date__c</fullName>
    <label>Confirmed Payment Date</label>
    <type>Date</type>
</CustomField>