unpackaged/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>(D) Decision Criteria: the formal solution requirements against which each participant in the decision process will evaluate (includes the technical and financial lens with which the customer views GitLab)</description>
    <inlineHelpText>(D) Decision Criteria: the formal solution requirements against which each participant in the decision process will evaluate (includes the technical and financial lens with which the customer views GitLab)</inlineHelpText>
    <label>Decision Criteria</label>
    <type>TextArea</type>
</CustomField>