unpackaged/main/default/objects/Opportunity/fields/Expected__c.field-meta.xml
<CustomField>
    <fullName>Expected__c</fullName>
    <label>Expected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Should_Be_Fine</fullName>
                <label>Should Be Fine</label>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not_Expected</fullName>
                <label>Not Expected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>