unpackaged/main/default/objects/Opportunity/fields/Payment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Payment_Stage__c</fullName>
    <label>Payment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment delayed past current month</fullName>
            </value>
            <value>
                <fullName>Payment issue</fullName>
            </value>
            <value>
                <fullName>Invoice/payment link sent</fullName>
            </value>
            <value>
                <fullName>AP process confirmed</fullName>
            </value>
            <value>
                <fullName>Payment sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>