unpackaged/main/default/objects/Opportunity/fields/SI_Partner__c.field-meta.xml
<CustomField>
    <fullName>SI_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SI Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>SI_Partner_For</relationshipName>
    <type>Lookup</type>
</CustomField>