unpackaged/main/default/objects/Opportunity/validationRules/Test_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Is_Required</fullName>
    <active>true</active>
    <description>Test_Is_Required</description>
    <errorConditionFormula>LEN( Test__c ) = 0</errorConditionFormula>
    <errorDisplayField>Test__c</errorDisplayField>
    <errorMessage>Test is a required field</errorMessage>
</ValidationRule>